--- a/TenderInfo/Views/Account/EditAccountMaterial.cshtml
+++ b/TenderInfo/Views/Account/EditAccountMaterial.cshtml
@@ -404,6 +404,7 @@
         </div>
     </div>
 </div>
+@Html.Partial("ImportModal")
 <div class="box box-danger">
     <div class="box-header">
         <h3 class="box-title">招标管理台账--物资</h3>
@@ -556,8 +557,11 @@
                     </div>
 
                     <div class="panel panel-default">
-                        <div class="panel-heading">投标人信息
+                        <div class="panel-heading">
+                            投标人信息
                             <button id="btnFirstAdd" type="button" class="btn btn-success btn-sm">新增</button>
+                            <button id="btnFirstImport" type="button" data-type="FirstMaterial" class="btn btn-info btn-sm InfoImport">批量导入</button>
+                            <button id="btnFirstRemove" type="button" data-type="FirstMaterial" class="btn bg-olive btn-sm InfoRemove">清空</button>
                         </div>
                         <div class="panel-body">
                             <div class="row">
@@ -569,12 +573,12 @@
                                                 <th rowspan="2" class="text-center" style="vertical-align:middle">购买招标文件潜在投标人</th>
                                                 <th rowspan="2" class="text-center" style="vertical-align:middle">投标人</th>
                                                 <th rowspan="2" class="text-center" style="vertical-align:middle">产品制造商（代理、贸易商投标时填写）</th>
-                                                <th colspan="2" rowspan="1" class="text-center">报价（元）</th>
-                                                <th rowspan="2" class="text-center" style="vertical-align:middle">初步评审被否决时在此栏说明</th>
+                                                <th colspan="2" rowspan="1" class="text-center">报价</th>
+                                                <th rowspan="2" class="text-center" style="vertical-align:middle">初步评审是否被否决</th>
                                             </tr>
                                             <tr>
                                                 <th class="text-center">单价</th>
-                                                <th class="text-center">总价</th>
+                                                <th class="text-center">总价（万元）</th>
                                             </tr>
                                         </thead>
                                         <tbody id="tableFirst"></tbody>
@@ -805,6 +809,25 @@
     </div>
 </div>
 <script>
+    function GetFirstTable() {
+        var accountID = $("#tbxAccountIDEdit").val();
+        $.post("/Account/GetListEdit", { "accountID": accountID, "type": "first" }, function (result) {
+            var list = "";
+            $.each(result, function (indexInArray, valueOfElement) {
+                list += "<tr>";
+                list += "<td><a href='javascript:void(0)' class='btnFirstEdit' data-uid='" + valueOfElement["AccountChildID"] + "'><i class='glyphicon glyphicon-pencil'></i></a>";
+                list += "&nbsp;&nbsp;&nbsp;&nbsp;<a href='javascript:void(0)' class='btnFirstDel' data-uid='" + valueOfElement["AccountChildID"] + "'><i class='glyphicon glyphicon-remove'></i></a></td>";
+                list += "<td>" + valueOfElement["TenderFilePlanPayPerson"] + "</td>";
+                list += "<td>" + valueOfElement["TenderPerson"] + "</td>";
+                list += "<td>" + valueOfElement["ProductManufacturer"] + "</td>";
+                list += "<td>" + valueOfElement["QuotedPriceUnit"] + "</td>";
+                list += "<td>" + valueOfElement["QuotedPriceSum"] + "</td>";
+                list += "<td>" + valueOfElement["NegationExplain"] + "</td>";
+                list += "</tr>";
+            });
+            $("#tableFirst").empty().append(list);
+        });
+    }
     $(function () {
         $(".accountDate").datetimepicker({
             language: 'zh-CN',
@@ -1129,25 +1152,7 @@
             });
         });
 
-        function GetFirstTable() {
-            var accountID = $("#tbxAccountIDEdit").val();
-            $.post("/Account/GetListEdit", { "accountID": accountID, "type": "first" }, function (result) {
-                var list = "";
-                $.each(result, function (indexInArray, valueOfElement) {
-                    list += "<tr>";
-                    list += "<td><a href='javascript:void(0)' class='btnFirstEdit' data-uid='" + valueOfElement["AccountChildID"] + "'><i class='glyphicon glyphicon-pencil'></i></a>";
-                    list += "&nbsp;&nbsp;&nbsp;&nbsp;<a href='javascript:void(0)' class='btnFirstDel' data-uid='" + valueOfElement["AccountChildID"] + "'><i class='glyphicon glyphicon-remove'></i></a></td>";
-                    list += "<td>" + valueOfElement["TenderFilePlanPayPerson"] + "</td>";
-                    list += "<td>" + valueOfElement["TenderPerson"] + "</td>";
-                    list += "<td>" + valueOfElement["ProductManufacturer"] + "</td>";
-                    list += "<td>" + valueOfElement["QuotedPriceUnit"] + "</td>";
-                    list += "<td>" + valueOfElement["QuotedPriceSum"] + "</td>";
-                    list += "<td>" + valueOfElement["NegationExplain"] + "</td>";
-                    list += "</tr>";
-                });
-                $("#tableFirst").empty().append(list);
-            });
-        }
+
 
         function GetSecondTable() {
             var accountID = $("#tbxAccountIDEdit").val();
