--- a/TenderInfo/Views/Account/EditAccountProject.cshtml
+++ b/TenderInfo/Views/Account/EditAccountProject.cshtml
@@ -377,9 +377,10 @@
         </div>
     </div>
 </div>
+@Html.Partial("ImportModal")
 <div class="box box-danger">
     <div class="box-header">
-        <h3 class="box-title">招标管理台账--物资</h3>
+        <h3 class="box-title">招标管理台账--@ViewBag.type</h3>
         <div class="box-tools pull-right">
             <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="" data-original-title="collapse">
                 <i class="fa fa-minus"></i>
@@ -520,6 +521,8 @@
                         <div class="panel-heading">
                             投标人信息
                             <button id="btnFirstAdd" type="button" class="btn btn-success btn-sm">新增</button>
+                            <button id="btnFirstImport" type="button" data-type="FirstProject" class="btn btn-info btn-sm InfoImport">批量导入</button>
+                            <button id="btnFirstRemove" type="button" data-type="FirstProject" class="btn bg-olive btn-sm InfoRemove">清空</button>
                         </div>
                         <div class="panel-body">
                             <div class="row">
@@ -749,6 +752,22 @@
     </div>
 </div>
 <script>
+    function GetFirstTable() {
+        var accountID = $("#tbxAccountIDEdit").val();
+        $.post("/Account/GetListEdit", { "accountID": accountID, "type": "first" }, function (result) {
+            var list = "";
+            $.each(result, function (indexInArray, valueOfElement) {
+                list += "<tr>";
+                list += "<td><a href='javascript:void(0)' class='btnFirstEdit' data-uid='" + valueOfElement["AccountChildID"] + "'><i class='glyphicon glyphicon-pencil'></i></a>";
+                list += "&nbsp;&nbsp;&nbsp;&nbsp;<a href='javascript:void(0)' class='btnFirstDel' data-uid='" + valueOfElement["AccountChildID"] + "'><i class='glyphicon glyphicon-remove'></i></a></td>";
+                list += "<td>" + valueOfElement["TenderFilePlanPayPerson"] + "</td>";
+                list += "<td>" + valueOfElement["TenderPerson"] + "</td>";
+                list += "<td>" + valueOfElement["QuotedPriceSum"] + "</td>";
+                list += "</tr>";
+            });
+            $("#tableFirst").empty().append(list);
+        });
+    }
     $(function () {
         $(".accountDate").datetimepicker({
             language: 'zh-CN',
@@ -1072,23 +1091,6 @@
                 }
             });
         });
-
-        function GetFirstTable() {
-            var accountID = $("#tbxAccountIDEdit").val();
-            $.post("/Account/GetListEdit", { "accountID": accountID, "type": "first" }, function (result) {
-                var list = "";
-                $.each(result, function (indexInArray, valueOfElement) {
-                    list += "<tr>";
-                    list += "<td><a href='javascript:void(0)' class='btnFirstEdit' data-uid='" + valueOfElement["AccountChildID"] + "'><i class='glyphicon glyphicon-pencil'></i></a>";
-                    list += "&nbsp;&nbsp;&nbsp;&nbsp;<a href='javascript:void(0)' class='btnFirstDel' data-uid='" + valueOfElement["AccountChildID"] + "'><i class='glyphicon glyphicon-remove'></i></a></td>";
-                    list += "<td>" + valueOfElement["TenderFilePlanPayPerson"] + "</td>";
-                    list += "<td>" + valueOfElement["TenderPerson"] + "</td>";
-                    list += "<td>" + valueOfElement["QuotedPriceSum"] + "</td>";
-                    list += "</tr>";
-                });
-                $("#tableFirst").empty().append(list);
-            });
-        }
 
         function GetSecondTable() {
             var accountID = $("#tbxAccountIDEdit").val();
@@ -1434,4 +1436,5 @@
         }
     });
 </script>
+
 
