--- a/TenderInfo/Views/Account/TableInfoMaterial.cshtml
+++ b/TenderInfo/Views/Account/TableInfoMaterial.cshtml
@@ -896,7 +896,7 @@
             showRefresh: true,                  //是否显示刷新按钮
             minimumCountColumns: 2,             //最少允许的列数
             clickToSelect: false,                //是否启用点击选中行
-            //height: 600,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+            height: 650,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
             uniqueId: "account.AccountMaterialID",          //每一行的唯一标识，一般为主键列
             showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
             cardView: false,                    //是否显示详细视图
