--- a/TenderInfo/Views/Account/EditAccountMaterial.cshtml
+++ b/TenderInfo/Views/Account/EditAccountMaterial.cshtml
@@ -407,7 +407,7 @@
 @Html.Partial("ImportModal")
 <div class="box box-danger">
     <div class="box-header">
-        <h3 class="box-title">招标管理台账--物资</h3>
+        <h3 class="box-title">招标管理台账--@ViewBag.type</h3>
         <div class="box-tools pull-right">
             <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="" data-original-title="collapse">
                 <i class="fa fa-minus"></i>
@@ -419,6 +419,7 @@
             <div class="form-horizontal">
                 <form id="EditAccountForm" method="post" enctype="multipart/form-data">
                     <input id="tbxAccountIDEdit" name="tbxAccountIDEdit" type="text" value="@ViewBag.id" />
+                    <input id="tbxAccountTypeEdit" name="tbxAccountTypeEdit" type="text" value="@ViewBag.type" />
                     <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
@@ -802,6 +803,9 @@
                         <button type="button" id="btnSubmit" class="btn btn-primary">
                             <i class="glyphicon glyphicon-ok"></i> 提交
                         </button>
+                        <button type="button" id="btnReturn" class="btn bg-black">
+                            <i class="glyphicon glyphicon-share-alt"></i> 返回
+                        </button>
                     </div>
                 </form>
             </div>
@@ -1152,8 +1156,6 @@
             });
         });
 
-
-
         function GetSecondTable() {
             var accountID = $("#tbxAccountIDEdit").val();
             $.post("/Account/GetListEdit", { "accountID": accountID, "type": "second" }, function (result) {
@@ -1435,7 +1437,8 @@
                         success: function (result) {
                             if (result === "ok") {
                                 toastr.success("操作成功！", "提示");
-                                window.location.href = "/Account/Material";
+                                //window.location.href = "/Account/Material";
+                                window.history.back(-1);
                             }
                         },
                         error: function (error) {
@@ -1446,6 +1449,19 @@
                     });
                 }
             });
+        });
+
+        $("#btnReturn").click(function () {
+            //var url = getQueryString("search");
+            ////var search = JSON.parse(decodeURIComponent(decodeURIComponent(url)));
+            //var search = JSON.parse(decodeURI(url));
+            ////var search = JSON.parse(url);
+            ////var id = getParam("id");
+            //console.log(url);
+            //console.log(search);
+
+            ////window.location.href = "/Account/Material?search=" + url;
+            window.history.back(-1);
         });
 
         function GetInfo() {
