--- a/TenderInfo/Views/Account/EditAccountProject.cshtml
+++ b/TenderInfo/Views/Account/EditAccountProject.cshtml
@@ -745,6 +745,9 @@
                         <button type="button" id="btnSubmit" class="btn btn-primary">
                             <i class="glyphicon glyphicon-ok"></i> 提交
                         </button>
+                        <button type="button" id="btnReturn" class="btn bg-black">
+                            <i class="glyphicon glyphicon-share-alt"></i> 返回
+                        </button>
                     </div>
                 </form>
             </div>
@@ -1372,9 +1375,11 @@
                                 toastr.success("操作成功！", "提示");
                                 if ($("#tbxAccountTypeEdit").val() === "工程") {
                                     window.location.href = "/Account/Project";
+                                    window.history.back(-1);
                                 }
                                 else {
                                     window.location.href = "/Account/Service";
+                                    window.history.back(-1);
                                 }
                             }
                         },
@@ -1386,6 +1391,10 @@
                     });
                 }
             });
+        });
+
+        $("#btnReturn").click(function () {
+            window.history.back(-1);
         });
 
         function GetInfo() {
