--- a/TenderInfo/Views/Account/TableInfoMaterial.cshtml
+++ b/TenderInfo/Views/Account/TableInfoMaterial.cshtml
@@ -10,6 +10,23 @@
     <table id="bsTable"></table>
 </div>
 <script>
+    var editModel = function (id) {
+        //根据当前行的id获取当前的行数据
+        var row = $("#bsTable").bootstrapTable('getRowByUniqueId', id);
+        var optionBT = $("#bsTable").bootstrapTable('getOptions');
+        //console.log(optionBT.pageNumber);
+        //console.log(optionBT.pageSize);
+        var params = { "limit": optionBT.pageSize, "offset": optionBT.pageNumber };
+        console.log(queryParams(params));
+        var jsonStr = queryParams(params);
+        jsonStr.projectType = encodeURI(jsonStr.projectType);
+        //console.log(typeof queryParams(params));
+        var search = encodeURI(JSON.stringify(jsonStr));
+        //var search = JSON.stringify(queryParams(params));
+        console.log(search);
+        console.log(JSON.parse(decodeURI(search)));
+        //window.location.href = "/Account/EditAccountMaterial?id=" + row.account.AccountID + "&search=" + search;
+    };
     $(function () {
         var columns = [
             [
@@ -31,8 +48,9 @@
                     visible: true,
                     formatter: function (value, row, index) {
                         //这里的三个参数：value表示当前行当前列的值；row表示当前行的数据；index表示当前行的索引（从0开始）。
-                        //var html = '<button type="button" onclick="editModel(' + row.account.AccountID + ')" class="btn btn-link">' + row.ProjectName + '</button >';
-                        var html2 = "<a href='/Account/EditAccountMaterial?id=" + row.account.AccountID + "'>" + row.account.ProjectName + '</a>';
+                        //var html = '<button type="button" onclick="editModel(' + row.account.AccountID + ')" class="btn btn-link">' + row.account.ProjectName  + '</button >';
+                        //return html;
+                        var html2 = "<a href='/Account/EditAccountMaterial?id=" + row.account.AccountID + "&type=" + row.account.ProjectType+ "'>" + row.account.ProjectName + '</a>';
                         return html2;
                     }
                 },
@@ -897,7 +915,7 @@
             minimumCountColumns: 2,             //最少允许的列数
             clickToSelect: false,                //是否启用点击选中行
             height: 650,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
-            uniqueId: "account.AccountMaterialID",          //每一行的唯一标识，一般为主键列
+            uniqueId: "AccountID",          //每一行的唯一标识，一般为主键列
             showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
             cardView: false,                    //是否显示详细视图
             detailView: false,                   //是否显示父子表
