--- a/TenderInfo/Views/Shared/_Layout.cshtml
+++ b/TenderInfo/Views/Shared/_Layout.cshtml
@@ -256,6 +256,36 @@
         <div class="control-sidebar-bg"></div>
 
         <script>
+            function getQueryString(name) {
+                var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
+                var reg_rewrite = new RegExp("(^|/)" + name + "/([^/]*)(/|$)", "i");
+                var r = window.location.search.substr(1).match(reg);
+                var q = window.location.pathname.substr(1).match(reg_rewrite);
+                if (r != null) {
+                    return unescape(r[2]);
+                } else if (q != null) {
+                    return unescape(q[2]);
+                } else {
+                    return null;
+                }
+            }
+
+            //            /**
+            //* 获取指定的URL参数值
+            //* URL:http://www.quwan.com/index?name=tyler
+            //* 参数：paramName URL参数
+            //* 调用方法:getParam("name")
+            //* 返回值:tyler
+            //*/
+            function getParam(paramName) {
+                paramValue = "", isFound = !1;
+                if (this.location.search.indexOf("?") == 0 && this.location.search.indexOf("=") > 1) {
+                    arrSource = unescape(this.location.search).substring(1, this.location.search.length).split("&"), i = 0;
+                    while (i < arrSource.length && !isFound) arrSource[i].indexOf("=") > 0 && arrSource[i].split("=")[0].toLowerCase() == paramName.toLowerCase() && (paramValue = arrSource[i].split("=")[1], isFound = !0), i++
+                }
+                return paramValue == "" && (paramValue = null), paramValue;
+            }
+
             var ngConfig = {
                 headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
                 transformRequest: function (obj) {
