最低价审批，完成查询，处理重复审批

--- a/TenderInfo/Views/TechnicSpecifiction/MinPrice.cshtml
+++ b/TenderInfo/Views/TechnicSpecifiction/MinPrice.cshtml
@@ -361,6 +361,7 @@
                                 $("#bsTable").bootstrapTable('refresh');
                             }
                             else {
+                                toastr.error(result, "提示");
                                 console.log(result);
                             }
                         },
@@ -392,6 +393,7 @@
                                 $("#bsTable").bootstrapTable('refresh');
                             }
                             else {
+                                toastr.error(result, "提示");
                                 console.log(result);
                             }
                         },
@@ -423,6 +425,7 @@
                                 $("#bsTable").bootstrapTable('refresh');
                             }
                             else {
+                                toastr.error(result, "提示");
                                 console.log(result);
                             }
                         },
@@ -454,6 +457,7 @@
                                 $("#bsTable").bootstrapTable('refresh');
                             }
                             else {
+                                toastr.error(result, "提示");
                                 console.log(result);
                             }
                         },
