给model加注释，部分修改招标进度--工程

--- a/TenderInfo/Views/Home/Index.cshtml
+++ b/TenderInfo/Views/Home/Index.cshtml
@@ -1,7 +1,33 @@
 ﻿
 @{
-    ViewBag.Title = "系统主页";
+    ViewBag.Title = "系统主页--测试系统";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>系统主页</h2>
+
+<ul>
+    <li>
+        <h3>
+            一、招标进度
+            1、删除同步功能
+            2、工程、服务台账同步
+            3、报表导出
+        </h3>
+    </li>
+    <li>
+        <h3>
+            二、招标台账
+            1、报表导出
+            2、浏览器兼容性测试
+        </h3>
+    </li>
+    <li>
+        <h3>
+            三、技术规格书
+            1、技术规格书上传
+            2、技术规格书查询
+            3、数据同步
+        </h3>
+    </li>
+</ul>
