--- a/TenderInfo/Views/Home/Login.cshtml
+++ b/TenderInfo/Views/Home/Login.cshtml
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="row" style="background-color:deepskyblue">
             <div class="col-md-12">
-                <h1 style="color:white;font-size:36px;font-weight:bold;" class="lead">招标管理系统</h1>
+                <h1 style="color:white;font-size:36px;font-weight:bold;" class="lead">招标管理系统--测试版</h1>
             </div>
         </div>
         <div class="row">
