完成综合评标法模型设计

--- a/TenderInfo/Views/Home/Index.cshtml
+++ b/TenderInfo/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <ul>
     <li>
         <h3>
-            一、招标进度
+            A、招标进度
             1、删除同步功能
             2、工程、服务台账同步
             3、报表导出
@@ -17,18 +17,27 @@
     </li>
     <li>
         <h3>
-            二、招标台账
+            B、招标台账
             1、报表导出
             2、浏览器兼容性测试
         </h3>
     </li>
     <li>
         <h3>
-            三、技术规格书
-            1、技术规格书上传
+            C、技术规格书审批
+            1、技术规格书回退后，重新上传
             2、技术规格书查询
             3、数据同步
             4、文件合并
+        </h3>
+    </li>
+    <li>
+        <h3>
+            D、其他
+            1、帮助文档
+            2、招标系统主页
+            3、系统权限划分
+            4、
         </h3>
     </li>
 </ul>
