--- a/TenderInfo/Views/TechnicSpecifiction/Comprehensive.cshtml
+++ b/TenderInfo/Views/TechnicSpecifiction/Comprehensive.cshtml
@@ -262,7 +262,7 @@
         </div>
     </div>
     <div class="box-body">
-        @Html.Partial("SearchInfoMinPrice")
+        @Html.Partial("SearchInfoComprehensive")
         <hr />
         <div class="row">
             <div class="col-md-12">
@@ -274,7 +274,7 @@
                         </button>
                     </div>
                 }
-                @Html.Partial("TableInfoMinPrice")
+                @Html.Partial("TableInfoComprehensive")
             </div>
         </div>
     </div>
