完成招标台账和招标进度数据同步功能，完成最低价审批重新上传审批功能

--- a/TenderInfo/Views/Account/TableInfoProject.cshtml
+++ b/TenderInfo/Views/Account/TableInfoProject.cshtml
@@ -5,6 +5,9 @@
     #bsTable th{
         vertical-align:middle;
     }
+    .bootstrap-table .table > thead > tr > th {
+        vertical-align: middle;
+    }
 </style>
 <div class="table-responsive">
     <table id="bsTable"></table>
