--- a/TenderInfo/Views/Home/Index.cshtml
+++ b/TenderInfo/Views/Home/Index.cshtml
@@ -10,9 +10,7 @@
     <li>
         <h3>
             A、招标进度
-            1、删除同步功能
-            2、工程、服务台账同步
-            3、报表导出
+            1、报表导出
         </h3>
     </li>
     <li>
@@ -20,6 +18,7 @@
             B、招标台账
             1、报表导出
             2、浏览器兼容性测试
+            3、数据对齐
         </h3>
     </li>
     <li>
@@ -37,7 +36,7 @@
             1、帮助文档
             2、招标系统主页
             3、系统权限划分
-            4、
+            4、招标会议室预订整合
         </h3>
     </li>
 </ul>
