--- a/TenderInfo/Views/SampleDelegation/TableInfo.cshtml
+++ b/TenderInfo/Views/SampleDelegation/TableInfo.cshtml
@@ -552,7 +552,7 @@
                     });
                 case "样品检测业务员查看":
                     return $.grep(tempArray, function (ele, index) {
-                        return index !== 4 && index !== 3;
+                        return index !== 4 && index !== 3 && index !== 2;
                     });
                 case "一次编码表录入":
                     return $.grep(tempArray, function (ele, index) {
