--- a/TenderInfo/Views/ProgressInfo/ProgressProject.cshtml
+++ b/TenderInfo/Views/ProgressInfo/ProgressProject.cshtml
@@ -155,6 +155,16 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group">
+                                                <label for="tbxTenderProgramAuditDateEdit">
+                                                    招标方案联审时间
+                                                </label>
+                                                <input id="tbxTenderProgramAuditDateEdit" name="tbxTenderProgramAuditDateEdit" class="form-control input-sm progressDate" placeholder="招标方案接收时间" />
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="panel panel-primary">
@@ -462,6 +472,7 @@
                             if (data === "ok") {
                                 $("#selectMaterialAccountModal").modal("hide");
                                 toastr.success("操作成功！", "提示");
+                                $("#bsTable").bootstrapTable('refresh');
                             }
                         }
                     );
