--- a/TenderInfo/Views/ProgressInfo/TableInfoMaterial.cshtml
+++ b/TenderInfo/Views/ProgressInfo/TableInfoMaterial.cshtml
@@ -48,7 +48,7 @@
 
         //初始化BS-Table
         $('#bsTableSelectAccount').bootstrapTable({
-            url: '/Account/GetMaterialListForSelect',         //请求后台的URL（*）
+            url: '/Account/GetAccountListForSelect',         //请求后台的URL（*）
             contentType: 'application/x-www-form-urlencoded',
             method: 'post',                     //请求方式（*）
             striped: true,                      //是否显示行间隔色
@@ -119,6 +119,29 @@
             ]
         });
     };
+    var DelSynchro = function (id) {
+        //根据当前行的id获取当前的行数据
+        var row = $("#bsTable").bootstrapTable('getRowByUniqueId', id);
+        var progressID = row.ProgressInfoID;
+        var args = { "progressID": progressID};
+        var accountName = "";
+        $.post("/Account/GetAccountNameByProgressID", encodeURIComponent(JSON.stringify(args)), function (result) {
+            accountName = result;
+            Ewin.confirm({ message: "确认要删除与台账【" + accountName + "】的数据同步关系吗？" }).on(function (e) {
+                if (!e) {
+                    return;
+                }
+                else {
+                    $.post("/Account/DelSynchroByProgressID", { "progressID": progressID}, function (result) {
+                        if (result === "ok") {
+                            toastr.success("操作成功！", "提示");
+                            $("#bsTable").bootstrapTable('refresh');
+                        }
+                    });
+                }
+            });
+        });
+    };
     $(function () {
         var operateEvents = {
             'click .editProgress': function (e, value, row, index) {
@@ -176,7 +199,7 @@
                         visible: true,
                         formatter: function (value, row, index) {//这里的三个参数：value表示当前行当前列的值；row表示当前行的数据；index表示当前行的索引（从0开始）。
                             if (row.IsSynchro === "是") {
-                                return '<button type="button" onclick="DelSynchro(' + row.ProgressInfoID + ')" class="btn btn-link">删除</button >';
+                                return '<button type="button" onclick="DelSynchro(' + row.ProgressInfoID + ')" class="btn btn-link">取消</button >';
                             }
                             else {
                                 return '<button type="button" onclick="selectModel(' + row.ProgressInfoID + ')" class="btn btn-link">选择</button >';
@@ -188,9 +211,7 @@
                         title: '类型',
                         rowspan: 2,
                         colspan: 1,
-                        //width: 45,
                         width: 100,
-                        //height: 81,
                         switchable: false,
                         valign: "middle",
                         visible: true
