--- a/TenderInfo/Views/TechnicSpecifiction/MinPrice.cshtml
+++ b/TenderInfo/Views/TechnicSpecifiction/MinPrice.cshtml
@@ -180,6 +180,70 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="reLoadModal">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">重新上传技术规格书</h4>
+            </div>
+            <div class="modal-body">
+                <div class="nav-tabs-custom">
+                    <div class="container-fluid">
+                        <form id="ReloadForm" method="post" enctype="multipart/form-data">
+                            <input id="tbxMinPriceIDReLoad" name="tbxMinPriceIDReLoad" class="" />
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="fileMinPriceReLoad">技术规格书--选择上传文件<span class="text-danger">(必填)</span></label>
+                                        <input id="fileMinPriceReLoad" name="fileMinPriceReLoad" type="file" class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                <button type="button" id="btnReLoadSubmit" class="btn btn-primary">提交</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="logModal">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">操作记录</h4>
+            </div>
+            <div class="modal-body">
+                <div class="nav-tabs-custom">
+                    <div class="container-fluid">
+                        <table class="table table-condensed table-hover">
+                            <thead>
+                                <tr>
+                                    <th>序号</th>
+                                    <th>操作内容</th>
+                                    <th>操作人员</th>
+                                    <th>操作时间</th>
+                                    <th>回退原因</th>
+                                    <th>技术规格书文件</th>
+                                </tr>
+                            </thead>
+                            <tbody id="logTable"></tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="box box-danger">
     <div class="box-header">
         <h3 class="box-title">技术规格书--经评审的最低投标价法提报、审批</h3>
@@ -207,6 +271,7 @@
         </div>
     </div>
 </div>
+<div id="userRole">@ViewBag.userRole</div>
 <script>
     $(function () {
         //加载部门信息
@@ -469,6 +534,45 @@
                     });
                 }
             });
+        });
+
+        //对ReloadForm表单进行前端验证
+        var validReloadForm = $("#ReloadForm").validate({
+            rules: {
+                fileMinPriceReLoad: { required: true }
+            }
+        });
+
+        //提交按钮
+        $("#btnReLoadSubmit").click(function () {
+            if (validReloadForm.form()) {
+                Ewin.confirm({ message: "确定要提交吗？" }).on(function (e) {
+                    if (!e) {
+                        return;
+                    }
+                    else {
+                        $("#ReloadForm").ajaxSubmit({
+                            url: "/TechnicSpecifiction/MinPriceReLoad",
+                            type: "post",
+                            success: function (result) {
+                                if (result === "ok") {
+                                    $("#reLoadModal").modal("hide");
+                                    toastr.success("操作成功！", "提示");
+                                    $("#bsTable").bootstrapTable('refresh');
+                                }
+                                else {
+                                    console.log(result);
+                                }
+                            },
+                            error: function (error) {
+                                console.log(error);
+                                toastr.error(error, "提示");
+                                return;
+                            }
+                        });
+                    }
+                });
+            }
         });
     });
 </script>
